--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
 .topo {
     padding: 20px 0;
+    position: relative;
 
+
+}
+
+.banner-topo {
+    background-color: #191e25;
+}
+
+.banner-topo .img-destaque {
+    max-width: 300px;
+}
+.banner-topo h1{
+    color: #14cc99
+}
+.banner-topo p{
+    color: #f9fafa
 }
